--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.7.7",
     "bootstrap": "^5.3.2",
     "drift-zoom": "^1.5.1",
+    "html-react-parser": "^5.2.1",
     "i18next": "^24.1.0",
     "next": "14.2.7",
     "next-i18next": "^15.4.0",
