--- a/package.json
+++ b/package.json
@@ -16,10 +16,7 @@
     "bootstrap": "^5.3.2",
     "drift-zoom": "^1.5.1",
     "html-react-parser": "^5.2.1",
-    "i18next": "^24.1.0",
     "next": "14.2.7",
-    "next-i18next": "^15.4.0",
-    "next-translate": "^2.6.2",
     "photoswipe": "^5.4.4",
     "rc-slider": "^11.1.7",
     "react": "^18",
@@ -27,7 +24,6 @@
     "react-countdown": "^2.3.6",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
-    "react-i18next": "^15.2.0",
     "react-image-zoom": "^1.3.1",
     "react-photoswipe-gallery": "^3.0.2",
     "react-router-dom": "^7.0.1",
@@ -36,7 +32,6 @@
     "wowjs": "^1.1.3"
   },
   "devDependencies": {
-    "@types/react": "^18.3.11",
-    "next-translate-plugin": "^2.6.2"
+    "@types/react": "^18.3.11"
   }
 }
