--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "wowjs": "^1.1.3"
   },
   "devDependencies": {
-    "@types/react": "^18.3.11"
+    "@types/node": "22.10.2",
+    "@types/react": "^18.3.11",
+    "typescript": "5.7.2"
   }
 }
