--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-router-dom": "^7.0.1",
     "sass": "^1.77.8",
     "swiper": "^11.1.11",
+    "three": "^0.173.0",
     "wowjs": "^1.1.3"
   },
   "devDependencies": {
