--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-image-zoom": "^1.3.1",
+    "react-loader-spinner": "^6.1.6",
     "react-photoswipe-gallery": "^3.0.2",
     "react-rating": "^2.0.5",
     "react-router-dom": "^7.0.1",
