--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
     "@popperjs/core": "^2.11.8",
     "@smastrom/react-rating": "^1.5.0",
     "@stripe/stripe-js": "^5.6.0",
-    "@tanstack/react-query": "^5.59.20",
+    "@tanstack/react-query": "^5.66.9",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.2",
     "drift-zoom": "^1.5.1",
     "html-react-parser": "^5.2.1",
+    "js-cookie": "^3.0.5",
     "next": "14.2.7",
     "photoswipe": "^5.4.4",
     "rc-slider": "^11.1.7",
